<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_delete_all"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_all"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sort"
            android:title="@string/sort_by">
            <menu>
                <item
                    android:id="@+id/menu_date_newest"
                    android:title="@string/date_newest" />
                <item
                    android:id="@+id/menu_date_oldest"
                    android:title="@string/date_oldest" />
                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/priority_high" />
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/priority_low" />
            </menu>
        </item>
    </group>

</menu>